[package]
name = "nanoview"
version = "0.0.0"
edition = "2018"
resolver = "2"

[dependencies]
#nanomesh = { git="https://github.com/nanolabo/nanomesh-rust" }
wgpu = { version = "0.11", features = ["spirv", "webgl"] }
tobj = "2"
image = "0.23.4"
bytemuck = "1"
futures = "0.3"
ultraviolet = "0.8.1"
slotmap = "0.4.0"
mikktspace = "0.2.0"
gltf = "0.15.2"